# gsea-rs

./: .gitignore  Cargo.toml  README.md  gsea-app.js  gsea-worker.js  index.html
.github/workflows/: build-and-release.yml
src/: algorithm.rs  lib.rs  stats.rs  utils.rs
