[package]
name = "gsea_rs"
version = "0.1.0"
edition = "2021"
description = "WebAssembly-ready preranked GSEA adapted from https://github.com/zqfang/GSEApy"
license = "BSD 3-Clause"
repository = "https://github.com/wigginno/gsea_rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
itertools = "0.13"
rand = { version = "0.8", features = ["small_rng"] }
getrandom = { version = "0.2", features = ["js"] }

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

[profile.release]
opt-level = 3
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "--enable-mutable-globals"]
